# practical-event-modeling-python

./: .gitignore  Makefile  README.md  pyproject.toml
src/autonomo/: application.py  domain_functions.py
src/autonomo/adapters/: http.py  kafka.py
src/autonomo/domain/: interfaces.py  rides.py  value.py  vehicles.py
src/autonomo/transfer/: conversions.py
tests/: test_application.py  test_conversions.py  test_domain_functions.py
tests/adapters/: test_kafka.py
tests/domain/: test_domain_functions.py  test_domain_logic.py  test_type_and_conversions.py
